--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "private": true,
   "dependencies": {
     "@csstools/normalize.css": "^11.0.1",
+    "@react-spring/three": "^9.0.0-rc.3",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
     "axios": "^0.21.0",
-    "gh-pages": "^3.1.0",
+    "drei": "^1.5.7",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-three-fiber": "^5.3.6",
     "styled-components": "^5.2.1",
+    "three": "^0.123.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "netlify deploy -p",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,7 +35,6 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://ArturStahov.github.io/goit-react-hw-04-movies",
   "browserslist": {
     "production": [
       ">0.2%",
